fixes for Jeep 2000 description.
Add missing signal pattern image.
Correct 'pluses' typo.
reword explanation of cam signal.

--- a/decoders/Jeep_2000.md
+++ b/decoders/Jeep_2000.md
@@ -11,9 +11,9 @@ dateCreated: 2020-01-06T01:54:19.647Z
 Overview
 --------
 
-There are two signals one from the crank wheel and the other from the cam. The crank wheel puts out a series of four pulses every 120 degrees. Each of the four pulses is 20 degrees apart and lasting only 2 degrees. The cam wheel pluses once every 360 degrees or 720 crank degrees. The pulse last for 180 degrees or 360 crank degrees.
+There are two signals one from the crank wheel and the other from the cam. The crank wheel puts out a series of four pulses every 120 degrees. Each of the four pulses is 20 degrees apart and lasting only 2 degrees. The cam wheel signal is high for 360 crank degrees then low for 360 crank degrees. The decoder does not support sequential fuel or spark. 
 
 Trigger Signal
 --------------
 
-![<File:Syncsignal.jpg>](Syncsignal.jpg "File:Syncsignal.jpg")
+![<File:Jeep2000-Syncsignal.jpg>](Jeep2000-Syncsignal.jpg "File:Jeep2000-Syncsignal.jpg")
