--- a/decoders/4G63.md
+++ b/decoders/4G63.md
@@ -28,7 +28,7 @@ It is comprised of crank and cam signals that are provided by either a hall sens
 
 ### Timing adjustment
 
-In most cases altering the trigger angle should not be required, however there is some small variation between the OEM versions of thIs trigger so some minor adjustment may be needed. Once you have the engine started, set a fixed ignition angle and check the timing with a timing light. If this is a few degrees out (&lt;20°), adjust the trigger angle here. If this is more than 20° out, there may be a larger problem.
+In most cases altering the trigger angle should not be required, however there is some small variation between the OEM versions of this trigger so some minor adjustment may be needed. Once you have the engine started, set a fixed ignition angle and check the timing with a timing light. If this is a few degrees out (&lt;20°), adjust the trigger angle here. If this is more than 20° out, there may be a larger problem.
 
 ### Trigger Pattern
 
