--- a/offline/eisvogel.latex
+++ b/offline/eisvogel.latex
@@ -948,7 +948,7 @@ $if(titlepage-background)$
   {\Large \textsf{$subtitle$}}
   $endif$
   \vskip 2em
-  \noindent {\Large \textsf{$for(author)$$author$$sep$, $endfor$} \vskip 0.6em \textsf{$date$}}
+  \noindent {\Large \textsf{$for(author)$$author$$sep$, $endfor$} \vskip 0.6em \textbf{Revision: } \textsf{$date$}}
   \vfill
 }
 $else$
