--- a/offline/eisvogel.latex
+++ b/offline/eisvogel.latex
@@ -940,15 +940,9 @@ $if(titlepage-background)$
 % The titlepage with a background image has other text spacing and text size
 {
   \setstretch{2}
-  \vfill
-  \vskip -8em
-  \noindent {\huge \textbf{\textsf{$title$}}}
-  $if(subtitle)$
-  \vskip 1em
-  {\Large \textsf{$subtitle$}}
-  $endif$
-  \vskip 2em
-  \noindent {\Large \textsf{$for(author)$$author$$sep$, $endfor$} \vskip 0.6em \textbf{Revision: } \textsf{$date$}}
+  \vskip 10em
+  \hskip -4.7em
+  \noindent {\Large \textbf{Revision: } \textsf{$date$}}
   \vfill
 }
 $else$
